# Generic-Api-Connector

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
connector/: anomaly.py  auth.py  base.py  client.py  config.py  exceptions.py  init.py  logger.py  models.py  registry.py  secret_provider.py  utils.py
connectors/: sim.py
simapi/: init.py  main.py
tests/: conftest.py  test_auth.py  test_pagination.py  test_retry.py  test_single_project.py
