[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "async-api-connector"
version = "0.1.0"
description = "Internal connector project"
requires-python = ">=3.9"

[flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]

[tool.setuptools.packages.find]
include = ["connector", "simapi"]
