[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "async-api-connector"
version = "0.1.0"
description = "Internal connector project"
requires-python = ">=3.9"


[tool.setuptools.packages.find]
include = ["connector", "simapi"]

[tool.black]
line-length = 88
target-version = ['py311']
